--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Rust
+name: Tests
 
 on:
   push:
@@ -10,7 +10,7 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,8 +19,5 @@ jobs:
       - name: Cache dependencies
         uses: Swatinem/rust-cache@v2
           
-      - name: Check code
-        run: cargo check --verbose
-    
       - name: Run tests
         run: cargo test --verbose
